--- a/typescript/eks-simple/tsconfig.json
+++ b/typescript/eks-simple/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2018",
     "module": "commonjs",
-    "lib": ["es2018"],
+    "lib": ["es2018","es2016", "es2017.object", "es2017.string"],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
@@ -19,5 +19,5 @@
     "strictPropertyInitialization": false,
     "typeRoots": ["./node_modules/@types"]
   },
-  "exclude": ["cdk.out"]
+  "exclude": ["**/*.d.ts","cdk.out"]
 }
